Opiskelijan tiedot -näkymän graafinen toteutus ilman toiminnallisuutta

--- a/Sisu/pom.xml
+++ b/Sisu/pom.xml
@@ -31,7 +31,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>fi.tuni.prog3.sisu.Sisu</mainClass>
+                    <mainClass>fi.tuni.prog3.sisu.SisuGUI</mainClass>
                 </configuration>
             </plugin>
         </plugins>
