pom lisätty dependency, JSONHandler aloitus

--- a/Sisu/pom.xml
+++ b/Sisu/pom.xml
@@ -15,6 +15,12 @@
             <artifactId>javafx-controls</artifactId>
             <version>13</version>
         </dependency>
+        <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.9.0</version>
+          <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
